[tool.poetry]
name = "pyruler"
version = "0.0.0"
description = "Simple and powerful rule engine to generate complex data validations on an easy way"
authors = ["Eduardo Aguilar <dante.aguilar41@gmail.com>"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.8.0"
tag_format = "$version"
bump_message = "bump: Semantic Release Bot: Release Version: $new_version 🤖🚀 [skip ci]"
version_files = [
    "pyproject.toml:version",
    "setup.py:version"
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
coverage = "~=5.5"
mamba = "~=0.11.2"
expects = "~=0.9.0"
yapf = "~=0.31.0"
pylint = "~=2.8.2"
isort = "~=5.9.1"
radon = "~=5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
