[tool.poetry]
name = "pyruler"
version = "0.11.0"
description = "Simple and powerful rule engine to generate complex data validations on an easy way"
license = "MIT"
readme = "README.md"
authors = ["Eduardo Aguilar <dante.aguilar41@gmail.com>"]
repository = "https://github.com/danteay/pyruler"
homepage = "https://github.com/danteay/pyruler"
documentation = "https://github.com/danteay/pyruler/wiki"
keywords = ['rule', 'engine', 'ruler', 'package']
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
coverage = "~=5.5"
mamba = "~=0.11.2"
expects = "~=0.9.0"
yapf = "~=0.31.0"
pylint = "~=2.8.2"
isort = "~=5.9.1"
radon = "~=5.0.1"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
