[metadata]
description-file = README.md

[flake8]
format = wemake
show-source = True
statistics = False
doctests = True
enable-extensions = G

# Plugins:
accept-encodings = utf-8
max-complexity = 6
max-line-length = 88
max-arguments = 11
max-try-body-length = 3
radon-max-cc = 10
radon-show-closures = True
radon-no-assert = True

# Self settings:
max-imports = 15
max-methods = 31
max-local-variables = 7

exclude =
  .git
  __pycache__
  .env
  .venv
  .vscode
  .pytest_cache
  .mypy_cache
  env
  __init__.py

ignore =
  A003   # Python builtin class attribute
  C101   # Coding magic comment not found
  D401   # First line should be in imperative mood
  DAR    # Darglint
  RST    # RST Docstrings
  W503   # Line break before binary operator
  WPS115 # Upper-case constant in a class
  WPS202 # Too many module members
  WPS323 # Missing empty line between `coding` magic comment and code
  WPS601 # Shadowed class attribute

[isort]
# https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = true
multi_line_output = 3
line_length = 88
indent = 4

[coverage:run]
omit=
  pyruler/__init__.py
  pyruler/*/__init__.py